# cadet

./: .gitignore  Makefile  Makefile.config.in  Makefile.in  README.md  aclocal.m4  configure.ac
Attic/tools/: chartable.tex  chartable.text  lmfonts.old  lmfonts.text  lminfo.sh  pfbinfo.sh
Website/: Makefile
Website/index/: Makefile  head-title.sgml  page-content.sgml  page-title.sgml
Website/sgml/: copyright-statement.sgml  main.sgml  more-download.sgml  more-elink.sgml  more-news.sgml
class/: Makefile  cadet_article.cls  cadet_cover.cls  cadet_examination.cls  cadet_exercise_sheet.cls  cadet_letter.cls  cadet_paper.cls  mg_article.cls  mg_cover.cls  mg_examen.cls  mg_letter.cls  mg_lettre.cls  mg_planche_exos.cls  paper.cls
config/: 15cadet.cnf  Makefile
devel/: Makefile  boxes.tex  devel.cls  ignoreblanks.tex  kdef.tex  setup.tex  sscan.tex  test.tex
example/: Makefile
example/cadet_article/: Makefile  agraf.tex  galley.tex  gsssr.tex  local.mac  rstdsl2.tex  torcn.tex
example/cadet_examen/: .gitignore  Makefile  ccont1.tex  ccont1_cr.tex  figure.mp
example/cadet_letter/: Makefile  example.tex
format/: .gitignore  Makefile
locale/: Makefile
macro/: .gitignore  Makefile  amssym.mac  lists.mac  marvosym.mac  structure.nw  verbatim.mac  zapfd.mac
make/: Makefile  bhrid.doc.mk  cadet.doc.mk
manual/: .gitignore  Makefile
paper/: Makefile  basics.tex  bhridintro.text  bhridpaper.cls  btfonts.tex  cadetintro.text  cadetpaper.cls  fontes.tex  lmfonts.tex  math.tex  paperrc.tex  pfssintro.tex  plainsample.tex  pseudotest.text  text.tex
src/: .gitignore  INDEX  Makefile  basedef.nw  bhridcore.nw  bhridman.sty  bhridman.tex  cadetcore.nw  cadetman.sty  cadetman.tex  cadetmanbegin.nw  cadetmanend.nw  calendar.nw  convcomp.nw  convent.nw  convmath.nw  convpunc.nw  convtext.nw  drvdvips.nw  drvpdf.nw  drvxdvi.nw  fontaps.nw  fontcmm.nw  fontcmmt.nw  fonteufm.nw  fonteusm.nw  fontg.nw  fontlm.nw  fontpx.nw  fontrsfs.nw  fonttx.nw  format.pl  format.spec  format.spec.in  hyphende.nw  hyphenen.nw  hyphenfr.nw  hyphenxx.nw  image.nw  kernel.nw  (+14 more)
style/: Makefile
test-suite/: Makefile  case.tex  encoding.tex  test.sh  write.tex
(+69 files in other folders)
